2005-12-08  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/icqt.py:
	Fixed encoding issue.

2005-12-05  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/defaultAvatar.png:
	* src/legacy/defaultJabberAvatar.png:
	Updated to maarten's submitted icon!  Thanks maarten!

	* src/legacy/icqt.py:
	Fixed issue wth retrieving vcard for user who isn't an ICQ user.

2005-12-04  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/icqt.py:
	Hrm, connectionlost doesn't work well with icq.
	Lots of fixes.

	* src/tlib/oscar.py:
	Actually bother to listen for message ack.

2005-12-01  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/icqt.py:
	More attempts to sever connection nicely.

	* src/tlib/oscar.py:
	Increased version we identify ourselves as.

	* src/disco.py:
	Severed long log entry.

2005-11-30  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/legacylist.py:
	Added handling of ICQ specific thingys, plus nicks.

	* src/legacy/icqt.py:
	Imported PyAIM changes.

	* src/legacy/glue.py:
	Fixed typo.

	* src/config.py:
	Added encoding which I had missed.

	* src/legacy/icqt.py:
	Check if session exists before removing.

2005-11-29  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/misciq.py:
	Fixed error packet to go back to user.

	* src/xdb/legacyaimtransport.py:
	Added aim-transport XDB plugin because you can use ICQ with it.

	* src/tlib/oscar.py:
	Added default exchange for createChat.

	* src/groupchat.py:
	Readded groupchat to see if it does indeed work with ICQ.

	* src/disco.py:
	* src/jabw.py:
	* src/legacy/__init__.py:
	* src/legacy/legacylist.py:
	* src/session.py:
	* src/utils.py:
	Imported directly from PyAIM, with some minor mods.

	* src/legacy/glue.py:
	Imported from PyAIM with a lot of mods for ICQ.

	* src/legacy/legacyiq.py:
	Imported barebones legacyiq.

	* config_example.xml:
	Added PyAIM new config options.

2005-11-28  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/avatar.py:
	* src/config.py:
	* src/contact.py: